schema/testdata/errors/permission_attribute_invalid_args.keel
model Person {
    actions {
        get getPerson(id)
    }

    //expect-error:5:16:AttributeArgumentError:required argument 'actions' missing
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    //expect-error:17:21:AttributeArgumentError:unexpected argument for @permission
    @permission(true)
}

task Task {
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    //expect-error:17:21:AttributeArgumentError:unexpected argument for @permission
    @permission(true)
}
